Added admin check, test images, form data for uploading new images and new collections

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -35,6 +35,11 @@
               </button>
             </div>
         {% endif %} {% endfor %} {% endif %} {% endwith %}
-        {%block content%} {%endblock%} 
+
+        {%if user.account_type == 'admin'%}
+          {%block Admin_Upload%} {%endblock%}
+        {%endif%}
+        {%block Guest%} {%endblock%}
+        {%block content%}{%endblock%}
     </body>   
 </html>
