--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -10,7 +10,7 @@
     background-color: #2c3e50;
 }
 nav{
-    height: 80px;
+    height: 150px;
     width: 100%;
 
 }
@@ -28,67 +28,161 @@ nav ul li{
     display: inline-block;
     line-height: 80px;
     margin: 0 5px;
-  }
-  nav ul li a{
-    color: white;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-  }
-  a.active,a:hover{
-    background: #1b9bff;
-    transition: .5s;
-  }
-  .checkbtn{
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-  }
-  #check{
-    display: none;
-  }
+}
+nav ul li a{
+  color: white;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+}
+a.active,a:hover{
+  background: #1b9bff;
+  transition: .5s;
+}
+.checkbtn{
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check{
+  display: none;
+}
 
+.slider {
+  position: relative;
+  width: 60%;
+  overflow: hidden;
+}
+.images {
+  display: flex;
+  width: 100%;
+}
+.images img {
+  height: 100%;
+  width: 100%;
+  transition: all 0.15s ease;
+}
+.images input {
+  display: none;
+}
+.dots {
+  display: flex;
+  justify-content: center;
+  margin: 5px;
+}
+.gallery {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dots label {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: solid #fff 3px;
+  cursor: pointer;
+  transition: all 0.15s ease;
+  margin: 5px;
+}
+.dots label:hover {background: #fff;}
+#img1:checked ~ .m1 {
+  margin-left: 0;
+}
+#img2:checked ~ .m2 {
+  margin-left: -100%;
+}
+#img3:checked ~ .m3 {
+  margin-left: -200%;
+}
+#img4:checked ~ .m4 {
+  margin-left: -300%;
+}
+.arrow-scroll {
+  position: relative;
+  height: 4em;
+}
+.arrow{
+  border:solid #ebff0d;
+  border-width: 0 5px 5px 0;
+  display: inline-block;
+  padding: 12px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+}
+.arrow:nth-child(2)
+{
+  animation: arrow1 1.5s ease-in-out infinite;
+}
+.arrow:nth-child(3)
+{
+  animation: arrow2 1.5s ease-in-out infinite;
+}
+@keyframes scroll{
+  0%{
+    bottom: 80%;
+    opacity: 1;
+  }
+  100%{
+    bottom: 20%;
+    opacity: 0;
+  }
+}
+@keyframes arrow1{
+  100%{
+    opacity: 0%;
+    top: 100%;
+  }
+}
+@keyframes arrow2{
+  100%{
+    opacity: 0;
+    top: 50%;
+  }
+}
 @media (max-width: 952px){
-    nav ul li a{
-      font-size: 16px;
-    }
+  nav ul li a{
+    font-size: 16px;
+  }
 }
 @media (max-width: 858px){
-    .checkbtn{
-      display: block;
-    }
-    ul{
-      position: fixed;
-      width: 30%;
-      height: 100vh;
-      background: #596169;
-      top: 150px;
-      left: -100%;
-      text-align: center;
-      transition: all .5s;
+  .checkbtn{
+    display: block;
+  }
+  ul{
+    position: fixed;
+    width: 30%;
+    height: 100vh;
+    background: #596169;
+    top: 150px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
 
-    }
-    nav ul li{
-      display: block;
-      margin: 50px 0;
-      line-height: 30px;
-    }
-    nav ul li a{
-      font-size: 20px;
-      background: none;
-    }
-    a:hover,a.active{
-      background: none;
-      color: #0082e6;
-    }
-    #check:checked ~ ul{
-      left: 0;
-    }
   }
-  section{
-    height: calc(100vh - 80px);
+  nav ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
   }
+  nav ul li a{
+    font-size: 20px;
+    background: none;
+  }
+  a:hover,a.active{
+    background: none;
+    color: #0082e6;
+  }
+  #check:checked ~ ul{
+    left: 0;
+  }
+}
+section{
+  height: calc(100vh - 80px);
+}
